--- a/views/index.jade
+++ b/views/index.jade
@@ -2,8 +2,8 @@ doctype
 html
   head
     title HelloTab
-    != css("application")
+    link(rel="stylesheet" type="text/css" href="bundle.css")
   body
     #app!= app
-    script(src="bundle.js")
+    script(type="text/javascript" src="bundle.js")
 
